# ur_move_ws

./: .gitignore  README.md
src/camera_detection/: CMakeLists.txt  package.xml
src/camera_detection/launch/: gazebo.launch.py
src/camera_detection/scripts/: camera_detection.py  dummy_script.py
src/camera_detection/src/: cpp_node.cpp
src/camera_detection/urdf/: camera_box.urdf  extra_box.urdf
src/camera_ws/: CMakeLists.txt  package.xml
src/camera_ws/launch/: gazebo.launch.py
src/camera_ws/scripts/: detect_target_client.py  detect_target_server.py  dummy_script.py  pose_pub.py  set_target_server.py
src/camera_ws/src/: cpp_node.cpp
src/camera_ws/urdf/: camera_box.urdf  extra_box.urdf
src/moveit_ur5/: CMakeLists.txt  package.xml
src/moveit_ur5/scripts/: dummy_script.py  ur5_control.py
src/moveit_ur5/src/: cpp_node.cpp  hello_moveit.cpp
src/target_interfaces/: CMakeLists.txt  package.xml
src/target_interfaces/srv/: DetectionTarget.srv  GetTarget.srv  SetTarget.srv  Start.srv
src/ur5_management/: CMakeLists.txt  package.xml
src/ur5_management/scripts/: camera_detection.py  dummy_controller_service_server.py  dummy_script.py  target_management.py
src/ur5_management/src/: cpp_node.cpp
src/ur5_moveit/: CMakeLists.txt  package.xml
src/ur5_moveit/src/: ur5_moveit.cpp
